# career-copilot

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  pyproject.toml  render.yaml  ruff.toml  supabase-schema.sql
.github/workflows/: ci.yml  deploy-hf.yml  deploy-render.yml  deploy-vercel.yml
app/: __init__.py  main.py
app/api/: admin.py  applications.py  coaching.py  cv.py  documents.py  health.py  interviews.py  matches.py  runs.py
app/core/: clients.py  config.py  tracing.py
app/db/: env.py
app/llm/: __init__.py  cache.py  provider.py
app/memory/: checkpointer.py  longterm.py
app/models/: db.py
app/orchestrator/: __init__.py  critic.py  hitl.py  router.py  state.py  supervisor.py
app/rag/: chunking.py  embeddings.py  ingest.py  retriever.py  store.py
backend/: Containerfile
docs/: DEPLOYMENT.md  PROJECT-STATUS.md  architecture.md
frontend/: .dockerignore  .env.local.example  Containerfile  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vercel.json  vitest.config.ts
frontend/lib/: api.ts  (+3 more)
infra/: compose.yaml
scripts/: demo.sh
tests/: conftest.py  test_agents_smoke.py  test_application.py  test_career_planning.py  test_chunking.py  test_config.py  test_critic.py  test_embeddings.py  test_health.py  test_hitl.py  test_jobsource.py  test_llm_hardening.py  test_llm_provider.py  test_longterm.py  test_matching.py  test_memory.py  test_models.py  test_portfolio.py  test_rag_quality.py  test_rag_store.py  test_retriever.py  test_router.py  test_state.py  test_tracing.py
(+99 files in other folders)
