[project]
name = "career-copilot"
version = "0.1.0"
description = "AI Career Copilot — supervisor multi-agent system"
requires-python = ">=3.12"
dependencies = [
  # --- orchestration / LLM ---
  "langgraph>=1.2.6",
  "langgraph-prebuilt>=1.1.0",
  "langgraph-checkpoint-postgres>=3.1.0",
  "langchain>=1.3.4",
  "langchain-core>=1.4.8",
  "langchain-groq>=1.1.3",
  "langchain-google-genai>=2.0.0",
  "langsmith>=0.8.18",
  # --- api ---
  "fastapi>=0.138.0",
  "uvicorn[standard]>=0.49.0",
  "python-multipart>=0.0.32",
  # --- config / db ---
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
  "psycopg[binary,pool]>=3.3.4",
  "python-dotenv>=1.2.1",
  # --- rag / vector ---
  "qdrant-client>=1.12.0",
  "fastembed>=0.4.2",
  # --- document parsing (cv agent) ---
  "pymupdf>=1.27.0",
  "python-docx>=1.2.0",
  "pdfplumber>=0.11.0",
  # --- web search / scraping (market agent) ---
  "ddgs>=9.14.4",
  "tavily-python>=0.5.0",
  "beautifulsoup4>=4.15.0",
  "lxml>=6.1.0",
  "httpx>=0.28.1",
  "requests>=2.34.0",
  "tenacity>=9.1.4",
  "tiktoken>=0.13.0",
]

[dependency-groups]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.6.0",
  "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[tool.uv]
package = false
